--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	const input = document.getElementById("search"), button = document.getElementById("searcher"), list = document.getElementById("articles");
 	const availableArticles = [
 		[
-			"definition/meaning of joe mama: outdated, early comedy",
+			"linguistic definition/meaning of joe mama: outdated, early comedy",
 			"articles/terminology/define-joe-mama.html"
 		],
 		[
@@ -19,6 +19,10 @@
 		[
 			"National Minimum Drinking Age Act of 1984",
 			"articles/laws/national-minimum-drinking-age-act.html"
+		],
+		[
+			"linguistic definition/meaning of opinion: one's perspective, or views",
+			"articles/terminology/define-opinion.html"
 		]
 	];
 	function searchForArticle() {
