--- a/index.html
+++ b/index.html
@@ -10,29 +10,38 @@
 	const availableArticles = [
 		[
 			"linguistic definition/meaning of joe mama: outdated, early comedy",
-			"articles/terminology/define-joe-mama.html"
+			"articles/terminology/define-joe-mama.html",
+			"definition of joe mama"
 		],
 		[
 			"linguistic definition/meaning of time: an advanced, complex concept",
-			"articles/terminology/define-time.html"
+			"articles/terminology/define-time.html",
+			"definition of time"
 		],
 		[
-			"National Minimum Drinking Age Act of 1984",
-			"articles/laws/national-minimum-drinking-age-act.html"
+			"national minimum drinking age act of 1984 law possessing any beverage only if above 21",
+			"articles/laws/national-minimum-drinking-age-act.html",
+			"National Minimum Drinking Age Act of 1984"
 		],
 		[
 			"linguistic definition/meaning of opinion: one's perspective, or views",
-			"articles/terminology/define-opinion.html"
+			"articles/terminology/define-opinion.html",
+			"definition of opinion"
+		],
+		[
+			"linguistic definition/meaning of opinionated: one's stubborn perspective, or views",
+			"articles/terminology/define-opinionated.html",
+			"definition of opinionated"
 		]
 	];
 	function searchForArticle() {
 		list.innerHTML = "";
 		const inp = input.value.trim().toLowerCase();
 		for (const article of availableArticles) {
-			if (article[0].toLowerCase().includes(inp)) {
+			if (article[0].includes(inp)) {
 				const link = document.createElement("a");
 				link.href = article[1];
-				link.textContent = article[0] + " | ";
+				link.textContent = article[2] + " | ";
 				link.style = "cursor: text; color: black; text-decoration: none; font-family: \"Sans Serif\" sans-serif";
 				list.appendChild(link);
 			}
