--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			"definition of time"
 		],
 		[
-			"national minimum drinking age act of 1984 law possessing any beverage only if above 21",
+			"national minimum drinking age act of 1984 law possessing any beverage only if above 21 years",
 			"articles/laws/national-minimum-drinking-age-act.html",
 			"National Minimum Drinking Age Act of 1984"
 		],
@@ -27,6 +27,11 @@
 			"linguistic definition/meaning of opinion: one's perspective, or views",
 			"articles/terminology/define-opinion.html",
 			"definition of opinion"
+		],
+		[
+			"mp3, or mpeg-1/mpeg-2 layered iii 3 lossy audio format, encoded with psychoacoustic models and serving/being used for encoding audio",
+			"articles/digital-formats/mp3.html",
+			"the MP3 audio format"
 		]
 	];
 	function searchForArticle() {
