--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			"definition of opinion"
 		],
 		[
-			"mp3, or mpeg-1/mpeg-2 layered iii 3 lossy audio format, encoded with psychoacoustic models and serving/being used for encoding audio",
+			"mp3, or mpeg-1/mpeg-2 layer iii 3 lossy audio format, encoded with psychoacoustic models and serving/being used for encoding audio",
 			"articles/digital-formats/mp3.html",
 			"the MP3 audio format"
 		]
