--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 			"base64, an encoding scheme/algorithm used/meant for safely storing binary data in text/ascii-only environments",
 			"articles/algorithms/base64.html",
 			"Base64"
+		],
+		[
+			"factorial of a million 1000000 1,000,000, absurd mathematical value, 5.6 million digits",
+			"articles/math/factorial-of-million.html",
+			"Factorial of a Million?!"
 		]
 	];
 	function searchForArticle() {
